--- a/frontend/src/app/pages/team/team.component.html
+++ b/frontend/src/app/pages/team/team.component.html
@@ -1,15 +1,18 @@
 <div class="team-content w-100">
   <div class="d-flex direction-column a-i-start w-100 container">
-    <div class="text-title mb-400 padd">Команда героев на пути своих приключений справится с любой миссией, <span>когда их
-        объединяет товарищество и зов мечты.</span> Присылай портфолио на hello{{'@'}}brainstore.agency и начни свой
-      квест!
+    <div
+      class="text-title mb-400 padd text-block">{{'Команда героев на пути своих приключений справится с любой миссией, ' | wrapShortWords}}
+      <span>
+      {{'когда их объединяет товарищество и зов мечты.'}}</span>{{' Присылай портфолио на ' | wrapShortWords}}
+      hello{{'@'}}brainstore.agency и начни свой квест!
     </div>
-    <div class="w-50 texx mb-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
+    <div
+      class="w-50 texx mb-80 text-block">{{'Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту' | wrapShortWords}}
       hello{{'@'}}brainstore.agency
     </div>
     <img src="images/team.png" alt="picture" class="mb-60"/>
-    <div class="text-gray mb-401">Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед Попов, Серега
-      Федотов, Ксения Хозяева, Александ Калугин, Валиахмед Попов, Ксения Хозяева
+    <div
+      class="text-gray mb-401 text-block">{{'Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед Попов, Серега Федотов, Ксения Хозяева, Александ Калугин, Валиахмед Попов, Ксения Хозяева' | wrapShortWords}}
     </div>
   </div>
   <app-manifesto></app-manifesto>
