--- a/frontend/src/app/pages/components/manifesto/manifesto.component.html
+++ b/frontend/src/app/pages/components/manifesto/manifesto.component.html
@@ -1,6 +1,7 @@
 <div class="w-100 background-white">
   <div class="container d-flex j-c-end direction-column gap-10 padding">
     <div class="text-gray">Наш манифест</div>
-    <markdown class="text-title black w-95" [data]="settings.settings?.manifest"></markdown>
+    <markdown class="text-title black w-95 text-block"
+              [data]="(settings.settings?.manifest | wrapShortWords)"></markdown>
   </div>
 </div>
