--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -568,3 +568,10 @@ markdown.text-title, markdown.d-inline {
 .w-auto {
   width: auto !important;
 }
+
+.text-block {
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  hyphens: auto;
+}
