--- a/frontend/src/app/pages/components/main-screen/main-screen.component.html
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.html
@@ -29,10 +29,9 @@
             <img *ngIf="item.show_logo" src="images/biglogo.svg" alt="logo" class="logo"/>
             <div class="bottom-container d-flex direction-column j-c-start gap-10">
               <a *ngIf="!item.link" [href]="item.link">
-                <markdown class="text-title text-block" [data]="(item.description | wrapShortWords)"></markdown>
+                <markdown class="text-title" [data]="item.description"></markdown>
               </a>
-              <markdown *ngIf="item.link" class="text-title text-block"
-                        [data]="(item.description | wrapShortWords)"></markdown>
+              <markdown *ngIf="item.link" class="text-title" [data]="item.description"></markdown>
             </div>
           </div>
         </div>
