--- a/frontend/src/app/pages/contacts/contacts.component.html
+++ b/frontend/src/app/pages/contacts/contacts.component.html
@@ -1,6 +1,6 @@
 <div class="team-content w-100">
   <div class="d-flex direction-column a-i-start w-100 container">
-    <div class="text-title mb-400 padd">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на
+    <div class="text-title mb-400 padd w-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на
       почту
       <span style="color: var(--text-gray);">hello{{'@'}}brainstore.agency</span> с пометкой желаемой должности в теме
       письма<span> и не забывай
