--- a/frontend/src/app/pages/components/statistics/statistics.component.scss
+++ b/frontend/src/app/pages/components/statistics/statistics.component.scss
@@ -118,6 +118,7 @@
             font-size: 85px;
             line-height: 42.5px;
             letter-spacing: -2px;
+            margin-bottom: 24.5px;
           }
         }
       }
@@ -156,6 +157,7 @@
             font-size: 115px;
             line-height: 120px;
             letter-spacing: -2.75px;
+            margin-bottom: 35px;
           }
         }
       }
@@ -185,6 +187,7 @@
             font-size: 115px;
             line-height: 120px;
             letter-spacing: -2.7px;
+            margin-bottom: 49px;
           }
         }
       }
