--- a/frontend/src/app/pages/contacts/contacts.component.html
+++ b/frontend/src/app/pages/contacts/contacts.component.html
@@ -1,18 +1,10 @@
 <div class="team-content w-100">
   <div class="d-flex direction-column a-i-start w-100 container">
-    <div class="text-title mb-400 padd w-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на
-      почту
-      <span style="color: var(--text-gray);">hello{{'@'}}brainstore.agency</span> с пометкой желаемой должности в теме
-      письма<span> и не забывай
-прикрепить портфолио!</span>
-    </div>
-    <div class="w-50 texx mb-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
-      hello{{'@'}}brainstore.agency
-    </div>
-    <img src="images/contacts.png" alt="picture" class="mb-60 mob-full"/>
-    <div class="text-gray mb-401 mobile-margin">Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед
-      Попов, Серега Федотов, Ксения Хозяева, Александ Калугин, Валиахмед Попов, Ксения Хозяева
-    </div>
+    <markdown class="text-title mb-400 padd w-80"
+              [data]="settings.settings?.contacts_description"></markdown>
+    <markdown class="w-50 texx mb-80" [data]="settings.settings?.contacts_sub_description"></markdown>
+    <img [src]="settings.settings?.contacts_image_description" alt="picture" class="mb-60 mob-full"/>
+    <markdown class="text-gray mb-401 mobile-margin" [data]="settings.settings?.contacts_image_description"></markdown>
   </div>
   <app-manifesto class=""></app-manifesto>
   <app-works class=""></app-works>
