--- a/frontend/src/app/pages/contacts/contacts.component.html
+++ b/frontend/src/app/pages/contacts/contacts.component.html
@@ -3,7 +3,7 @@
     <markdown class="text-title mb-400 padd w-80"
               [data]="settings.settings?.contacts_description"></markdown>
     <markdown class="w-50 texx mb-80" [data]="settings.settings?.contacts_sub_description"></markdown>
-    <img [src]="settings.settings?.contacts_image_description" alt="picture" class="mb-60 mob-full"/>
+    <img [src]="settings.settings?.contacts_image_url" alt="picture" class="mb-60 mob-full"/>
     <markdown class="text-gray mb-401 mobile-margin" [data]="settings.settings?.contacts_image_description"></markdown>
   </div>
   <app-manifesto class=""></app-manifesto>
