--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -230,6 +230,10 @@ markdown, .d-block {
   width: 80%;
 }
 
+.w-70 {
+  width: 70%;
+}
+
 .w-50 {
   width: 50%;
 }
@@ -569,12 +573,3 @@ markdown.text-title, markdown.d-inline {
   width: auto !important;
 }
 
-//.text-block {
-//  position: relative;
-//  white-space: nowrap;
-//
-//  &::before {
-//    content: '\200B';
-//    white-space: normal;
-//  }
-//}
