--- a/frontend/src/app/pages/components/customers/customers.component.html
+++ b/frontend/src/app/pages/components/customers/customers.component.html
@@ -6,13 +6,14 @@
         <a
           href="#" class="company"
           *ngFor="let client of settings.settings?.clients; index as i"
-          (mouseenter)="showDescription(i)"
+          (mouseenter)="showDescription()"
+          (mouseleave)="hideDescription()"
           (click)="$event.preventDefault();"
         >{{client.name}}</a>
       </div>
-      <div class="description d-flex direction-column gap-60"
-           *ngFor="let client of settings.settings?.clients; index as i"
-           [ngClass]="{'visible': currentIndex ===i, 'hidden': currentIndex !==i}">
+      <div class="description direction-column gap-60"
+           [style.display]="isDescriptionVisible ? 'flex' : 'none'"
+           *ngFor="let client of settings.settings?.clients">
         <img [src]="client.image_url" alt="logo"/>
         <div class="text-gray">{{client.description}}</div>
         <div class="d-flex direction-row flex-wrap gap-10">
