--- a/frontend/src/app/pages/components/customers/customers.component.html
+++ b/frontend/src/app/pages/components/customers/customers.component.html
@@ -7,6 +7,7 @@
           href="#" class="company"
           *ngFor="let client of settings.settings?.clients; index as i"
           (mouseenter)="showDescription(i)"
+          (mouseleave)="hideDescription()"
           (click)="$event.preventDefault();"
         >{{client.name}}</a>
       </div>
