--- a/frontend/src/app/components/slider/slider.component.html
+++ b/frontend/src/app/components/slider/slider.component.html
@@ -7,7 +7,7 @@
      [style.width]="width"
 >
   <div *ngFor="let project of slides" class="d-flex direction-column slide">
-    <div class="banner d-flex a-i-center j-c-center w-100"
+    <div [routerLink]="'/projects/'+(project.seo_alias || project.id)" class="banner d-flex a-i-center j-c-center w-100"
          [style]="{'background-image': 'url(' + project.image_url + ')'}">
     </div>
     <div class="d-flex direction-row gap-10 services">
