--- a/frontend/src/app/components/slider/slider.component.html
+++ b/frontend/src/app/components/slider/slider.component.html
@@ -7,17 +7,30 @@
      [style.width]="width"
 >
   <div *ngFor="let project of slides" class="d-flex direction-column slide">
-    <div [routerLink]="'/projects/'+(project.seo_alias || project.id)" class="banner d-flex a-i-center j-c-center w-100"
+    <div *ngIf="project.seo_alias?.startsWith('http')" (click)="openUrl(project)" class="banner d-flex a-i-center j-c-center w-100"
          [style]="{'background-image': 'url(' + project.image_url + ')'}">
     </div>
+    <div *ngIf="!project.seo_alias?.startsWith('http')" [routerLink]="getUrl(project)" class="banner d-flex a-i-center j-c-center w-100"
+         [style]="{'background-image': 'url(' + project.image_url + ')'}">
+    </div>
+
     <div class="d-flex direction-row gap-10 services">
       <div class="service" *ngFor="let tag of project.tags">{{tag}}</div>
     </div>
-    <div class="text-gray w-70 mobik">
-      <a [routerLink]="'/projects/'+(project.seo_alias || project.id)" class="text-black">{{project.name}}&nbsp;</a>
-      <a [routerLink]="'/projects/'+(project.seo_alias || project.id)" class="text-gray">
+
+    <div *ngIf="project.seo_alias?.startsWith('http')" class="text-gray w-70 mobik">
+      <a [href]="getUrl(project)" target="_blank" class="text-black">{{project.name}}&nbsp;</a>
+      <a [href]="getUrl(project)" target="_blank" class="text-gray">
         <markdown class="d-inline" [data]="project.short_description"></markdown>
       </a>
     </div>
+
+    <div *ngIf="!project.seo_alias?.startsWith('http')" class="text-gray w-70 mobik">
+      <a [routerLink]="getUrl(project)" class="text-black">{{project.name}}&nbsp;</a>
+      <a [routerLink]="getUrl(project)" class="text-gray">
+        <markdown class="d-inline" [data]="project.short_description"></markdown>
+      </a>
+    </div>
+
   </div>
 </div>
