--- a/frontend/src/app/pages/components/statistics/statistics.component.html
+++ b/frontend/src/app/pages/components/statistics/statistics.component.html
@@ -4,7 +4,7 @@
     <div class="d-flex direction-row flex-wrap">
       <div class="section d-flex direction-column" *ngFor="let item of items">
         <div class="count">{{item.count}}</div>
-        <div class="text-black w-70">{{item.text}}</div>
+        <div class="text-black w-70" style="margin-top: 10px">{{item.text}}</div>
       </div>
     </div>
   </div>
