--- a/frontend/src/app/pages/components/form/form.component.html
+++ b/frontend/src/app/pages/components/form/form.component.html
@@ -6,33 +6,34 @@
         <img src="images/logo-black.svg" alt="logo" class="logo"/>
         <div class="text-black d-flex direction-column">
           <span>{{settings.settings?.phone}}</span>
-          <span>brainstore.com</span>
+          <span>{{settings.settings?.email}}</span>
         </div>
         <div class="text-black d-flex direction-column">
           <a *ngIf="settings.settings?.tg" [href]="settings.settings?.tg">Telegram</a>
           <a *ngIf="settings.settings?.vk" [href]="settings.settings?.vk">VK</a>
         </div>
         <div class="d-flex direction-column">
-          <span class="text-black">© 2024 Brainstore</span>
+          <span class="text-black">© {{getYear()}} Brainstore</span>
           <span class="text-gray">{{settings.settings?.address}}</span>
         </div>
       </div>
     </div>
     <form (submit)="send($event)" class="d-flex direction-column gap-50 w-50">
-      <div *ngIf="success">
-        <label class="text-black">Ваше сообщениe отправлено!</label>
+      <div *ngIf="success" class="success-message">
+        <h3 class="success-title">Сообщение отправлено</h3>
+        <p class="success-text">Спасибо! Мы свяжемся с вами в ближайшее время.</p>
       </div>
       <div *ngIf="!success" class="form-item direction-row a-i-center">
-        <label class="text-black">Имя&nbsp;&nbsp;</label>
-        <input name="name" required/>
+        <!-- <label class="text-black">Имя&nbsp;&nbsp;</label> -->
+        <input name="name" placeholder="Имя" required/>
       </div>
       <div *ngIf="!success" class="form-item direction-row a-i-center">
-        <label class="text-black">Телефон&nbsp;&nbsp;</label>
-        <input name="phone" required/>
+        <!-- <label class="text-black">Телефон&nbsp;&nbsp;</label> -->
+        <input name="phone" placeholder="Телефон" required/>
       </div>
       <div *ngIf="!success" class="form-item direction-row a-i-center">
-        <label class="text-black">E-mail&nbsp;&nbsp;</label>
-        <input name="email" required/>
+        <!-- <label class="text-black">E-mail&nbsp;&nbsp;</label> -->
+        <input name="email" placeholder="E-mail" required/>
       </div>
       <div class="d-flex direction-column gap-15">
         <div *ngIf="!success" class="form-textarea d-flex direction-column gap-15">
@@ -50,16 +51,16 @@
     <div class="d-flex direction-column gap-30" *ngIf="isMobile">
       <img src="images/logo-black.svg" alt="logo" class="logo"/>
       <div class="text-black d-flex direction-column">
-        <span class="m-b">+7 (843) 251-99-99</span>
-        <span class="m-b">brainstore.com</span>
+        <span class="m-b">{{settings.settings?.phone}}</span>
+        <span class="m-b">{{settings.settings?.email}}</span>
       </div>
       <div class="text-black d-flex direction-column">
-        <span class="m-b">Telegram</span>
-        <span class="m-b">VK</span>
+        <a *ngIf="settings.settings?.tg" [href]="settings.settings?.tg">Telegram</a>
+        <a *ngIf="settings.settings?.vk" [href]="settings.settings?.vk">VK</a>
       </div>
       <div class="d-flex direction-column">
-        <span class="text-black">© 2024 Brainstore</span>
-        <span class="text-gray">Казань, Университетская, 20 / Москва, Лубянский проезд 19с1</span>
+        <span class="text-black">© {{getYear()}} Brainstore</span>
+        <span class="text-gray">{{settings.settings?.address}}</span>
       </div>
     </div>
   </div>
